# bami-identity-service

./: Dockerfile  README.md  pyproject.toml
deploy/kustomize/services/identity/base/: deployment.yaml
src/identity_service/: main.py
src/identity_service/api/: dependencies.py
src/identity_service/api/v1/: auth.py
src/identity_service/application/dto/: login.py  register.py  token.py
src/identity_service/application/services/: auth_service.py
src/identity_service/authz/: provider.py
src/identity_service/domain/exceptions/: auth.py
src/identity_service/domain/models/: user.py
src/identity_service/infrastructure/repositories/: mappers.py  user_repo.py
src/identity_service/infrastructure/security/: jwt.py  password.py
src/identity_service/interfaces/: error_handlers.py
